Fixed "of concern" bugs